--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   firebase_core: ^0.5.3
   font_awesome_flutter: ^8.11.0
+  firebase_auth: ^0.18.3
+  google_sign_in: ^4.5.6
 
 dev_dependencies:
   flutter_test:
