--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^6.1.1
   cloud_firestore: ^0.14.4
   cupertino_icons: ^1.0.0
+  firebase_auth: ^0.18.3
   firebase_core: ^0.5.3
   font_awesome_flutter: ^8.11.0
-  firebase_auth: ^0.18.3
   google_sign_in: ^4.5.6
 
 dev_dependencies:
