--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,10 @@ dependencies:
   bloc: ^6.1.1
   cloud_firestore: ^0.14.4
   cupertino_icons: ^1.0.0
+  equatable: ^1.2.5
   firebase_auth: ^0.18.3
   firebase_core: ^0.5.3
+  flutter_bloc: ^6.1.1
   font_awesome_flutter: ^8.11.0
   google_sign_in: ^4.5.6
 
